# storfox-template-old

./: .gitignore  alembic.ini  client.py  mypy.ini  pyproject.toml  server.py
application/controllers/: customer.py  echo.py
application/dtos/: __init__.py
application/entities/: customer.py  stock_count.py  unit.py
application/exceptions/: __init__.py
application/helpers/: params.py  url.py
application/repositories/: customer.py  user.py
application/services/: customer.py
application/value_objects/: __init__.py  address.py  email.py  line_item.py  phone.py
config/: development.py  production.py  testing.py
genproto/echo/: __init__.py
migrations/: env.py
migrations/versions/: 0001_20210309_1808.py
proto/: customer.proto
protos/: echo.proto
schemes/: __init__.py  customer.py
scripts/: install  lint  makemigration  migrate  protobuf  run
