[tool.poetry]
name = "storfox"
version = "0.1.0"
description = ""
authors = ["Bekhzod Tillakhanov <bekhzod.tillakhanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
betterproto = { git = "https://github.com/danielgtaylor/python-betterproto.git", branch = "master" }
storfox-framework = { git = "https://github.com/storfox/storfox-framework.git", branch = "main" }
grpcio-tools = "^1.35.0"
mypy = "^0.800"
databases = {extras = ["postgresql"], version = "^0.4.1"}
dependency-injector = "^4.23.2"
pytest = "^6.2.2"
SQLAlchemy = "^1.3.23"
alembic = "^1.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
